kustomize/overlays/staging/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: selecoes-stg
  labels:
    environment: staging
    app: selecoes
