kustomize/overlays/staging/patch-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: selecoes
spec:
  rules:
    - host: selecoes-staging.unilab.edu.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: selecoes
                port:
                  number: 80
